--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  region: us-west-1
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-us-west-1-306476627547
-  bucket_path: docker-multi
+  region: eu-west-2
+  app: docker-react-test 
+  env: DockerReactTest-env
+  bucket_name: elasticbeanstalk-eu-west-2-747499340633
+  bucket_path: docker-react-test
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
